manifests/infra/registry/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: registry
spec:
  entryPoints:
    - registry
  routes:
    - match: Host(`registry.dappmesh.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - kind: Service
          name: docker-registry
          namespace: registry
          port: 5000
          scheme: https
          serversTransport: registry-transport
  tls:
    secretName: registry-tls
